--- a/src/custom-saas/header.scss
+++ b/src/custom-saas/header.scss
@@ -91,24 +91,11 @@
                     display: flex;
                     align-items: center;
 
-                    .bar__button {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
+                    .button--bar {
                         width: 138px;
-                        height: 48px;
-                        font-size: 1.143rem;
-                        font-weight: 700;
-                        line-height: 1.5;
-                        color: $white;
-                        background-color: $color06;
-                        border-radius: 2px;
-                        padding: 12px 24px;
                         margin-right: 32px;
-                        transition: background-color 0.33s;
 
                         &:hover {
-                            background-color: rgba($color06, .75);
                             animation: heartbeat 1.5s ease-in-out both;
                         }
                     }
