--- a/src/custom-saas/typography.scss
+++ b/src/custom-saas/typography.scss
@@ -53,6 +53,7 @@ $color04: #0087fe00;
 $color05: #1f1f1d;
 $color06: #0087fe;
 $color07: #5f5f5c;
+$color08: #9B9B99;
 
 html {
     font-size: 14px;
@@ -77,7 +78,14 @@ h2 {
     font-weight: 700;
     line-height: 1.5;
     color: $color05;
-    margin-bottom: 0;
+}
+
+h3 {
+    font-family: $Mulish;
+    font-size: 1.429rem;
+    font-weight: 700;
+    line-height: 1.6;
+    color: $color05;
 }
 
 p {
@@ -118,4 +126,25 @@ span {
 img {
     max-width: 100%;
     height: auto;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 138px;
+    height: 48px;
+    font-size: 1.143rem;
+    font-weight: 700;
+    line-height: 1.5;
+    color: $white;
+    background-color: $color06;
+    border-radius: 2px;
+    padding: 12px 24px;
+    transition: background-color 0.33s;
+
+    &:hover {
+        color: $white;
+        background-color: rgba($color06, .75);
+    }
 }
