--- a/src/custom-saas/service.scss
+++ b/src/custom-saas/service.scss
@@ -8,5 +8,12 @@
         .service-name {
             margin: 16px 0 8px 0;
         }
+
+        @media (max-width: 767px) {
+            margin-top: 32px;
+        }
+    }
+    @media (max-width: 767px) {
+        margin-top: -7px;
     }
 }
