--- a/src/custom-saas/typography.scss
+++ b/src/custom-saas/typography.scss
@@ -43,6 +43,9 @@
 $Mulish: 'Mulish',
 sans-serif;
 
+//font-icons
+@import "font-icons";
+
 //colors
 $white: #ffffff;
 $black: #000000;
@@ -60,7 +63,7 @@ html {
 }
 
 body {
-    min-width: 320px;
+    min-width: 360px;
 }
 
 h1 {
@@ -70,6 +73,10 @@ h1 {
     line-height: 1.5;
     color: $color05;
     margin-bottom: 0;
+
+    @media (max-width: 991px) {
+        font-size: 2.286rem;
+    }
 }
 
 h2 {
@@ -78,6 +85,10 @@ h2 {
     font-weight: 700;
     line-height: 1.5;
     color: $color05;
+
+    @media (max-width: 991px) {
+        font-size: 1.714rem;
+    }
 }
 
 h3 {
@@ -86,6 +97,10 @@ h3 {
     font-weight: 700;
     line-height: 1.6;
     color: $color05;
+
+    @media (max-width: 991px) {
+        font-size: 1.143rem;
+    }
 }
 
 p {
